# hw3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
inc/: 3SAT.h  combined3SAT.h
test/: test.h
